[metadata]
name = prometheus_sgx_exporter
version = attr: prometheus_sgx_exporter.__version__

[options]
packages = find:
#scripts = prometheus-sgx-exporter

[options.data_files]
lib/systemd/system = prometheus-sgx-exporter.service

[options.entry_points]
console_scripts = 
    prometheus-sgx-exporter = prometheus_sgx_exporter.__main__:main
